--- a/paginas/productos/detalles-productos.html
+++ b/paginas/productos/detalles-productos.html
@@ -45,36 +45,16 @@
                 </div>
             </div>
         </nav> 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="https://placehold.co/1200x400/grey/white?text=Slide+1" class="d-block w-100" alt="Primera imagen">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://placehold.co/1200x400/grey/white?text=Slide+2" class="d-block w-100" alt="Segunda imagen">
-                </div>
-                <div class="carousel-item">
-                    <img src="https://placehold.co/1200x400/grey/white?text=Slide+3" class="d-block w-100" alt="Tercera imagen">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+        
         </header>
   
     <main>
         <div class="container mt-5"> <h1 class="text-center">NUEVOS PRODUCTOS</h1>
-            <div class="row" id="idRowProductos"></div>
+            <div class="row" id="idDetalleProducto"></div>
         </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src="../productos/detallesProductos.js"></script>
 </body>
 </html>
